last year version

--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -8,11 +8,11 @@
 }
 
 .dashboardBtn:hover{
-    background-color: #0f0e9f ;
+    background-color: #05276B ;
     color: #fff;
 }
 
 .active{
-    background-color: #0f0e9f;
+    background-color: #05276B;
     color: #fff;
 }
